--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
             </div>
             <div class="setting-buttons">
                 <button id="save-settings" class="btn-primary">保存设置</button>
-                <button id="cancel-settings" class="btn-secondary">取消</button>
+            </div>
+            <div class="settings-help">
+                <small>💡 提示：按ESC键或点击外部区域可关闭设置面板</small>
             </div>
         </div>
     </div>
