--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
                 股票行情
             </span>
             <div class="widget-controls">
-                <button id="settings-btn" class="control-btn" title="设置">
-                    <i class="fas fa-cog"></i>
-                </button>
                 <button id="minimize-btn" class="control-btn" title="最小化到托盘">
                     <i class="fas fa-minus"></i>
                 </button>
@@ -31,6 +28,20 @@
         </div>
 
         <div class="widget-content">
+            <!-- 股票代码输入区域 -->
+            <div class="stock-input-section">
+                <div class="stock-code-input-group">
+                    <input type="text" id="new-stock-code" placeholder="输入股票代码 (如: 000001)" maxlength="6">
+                    <button id="add-stock-btn" class="btn-add" title="添加股票">
+                        <i class="fas fa-plus"></i>
+                    </button>
+                </div>
+                <div class="stock-codes-help">
+                    <small>支持格式: 000001(深市), 600000(沪市), 300001(创业板), 00001(港股)</small>
+                </div>
+            </div>
+
+            <!-- 股票列表 -->
             <div id="stock-list" class="stock-list">
                 <!-- 股票列表将通过JavaScript动态生成 -->
                 <div class="loading-placeholder">
@@ -47,46 +58,6 @@
                 <button id="refresh-btn" class="refresh-btn" title="立即刷新">
                     <i class="fas fa-sync-alt"></i>
                 </button>
-            </div>
-        </div>
-
-        <!-- 设置面板 -->
-        <div id="settings-panel" class="settings-panel hidden">
-            <h3>设置</h3>
-
-            <!-- 股票代码管理 -->
-            <div class="setting-group">
-                <label>股票代码管理:</label>
-                <div class="stock-codes-manager">
-                    <div class="stock-codes-list" id="stock-codes-list">
-                        <!-- 股票代码列表将通过JavaScript动态生成 -->
-                    </div>
-                    <div class="stock-code-input-group">
-                        <input type="text" id="new-stock-code" placeholder="输入股票代码 (如: 000001)" maxlength="6">
-                        <button id="add-stock-btn" class="btn-add" title="添加股票">
-                            <i class="fas fa-plus"></i>
-                        </button>
-                    </div>
-                    <div class="stock-codes-help">
-                        <small>支持格式: 000001(深市), 600000(沪市), 300001(创业板)</small>
-                    </div>
-                </div>
-            </div>
-
-            <div class="setting-group">
-                <label for="refresh-interval">数据刷新间隔 (秒):</label>
-                <input type="number" id="refresh-interval" min="5" max="300" value="30">
-            </div>
-            <div class="setting-group">
-                <label for="rotation-interval">任务栏轮播间隔 (秒):</label>
-                <input type="number" id="rotation-interval" min="2" max="60" value="5">
-                <small class="setting-help">在任务栏中每几秒切换显示一个股票</small>
-            </div>
-            <div class="setting-buttons">
-                <button id="save-settings" class="btn-primary">保存设置</button>
-            </div>
-            <div class="settings-help">
-                <small>💡 提示：按ESC键或点击外部区域可关闭设置面板</small>
             </div>
         </div>
     </div>
