工程打包exe后读取外部配置文件

--- a/floating.html
+++ b/floating.html
@@ -69,6 +69,7 @@
             font-size: 18px;
             font-weight: bold;
             min-width: 80px;
+            color: white;
         }
 
         .stock-change {
