--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>股票行情小工具</title>
+    <title>小工具</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
@@ -15,7 +15,7 @@
         <div class="widget-header">
             <span class="widget-title">
                 <i class="fas fa-chart-line"></i>
-                股票行情
+                小工具
             </span>
             <div class="widget-controls">
                 <button id="minimize-btn" class="control-btn" title="最小化到托盘">
@@ -37,7 +37,7 @@
                     </button>
                 </div>
                 <div class="stock-codes-help">
-                    <small>支持格式: 000001(深市), 600000(沪市), 300001(创业板), 00001(港股)</small>
+                    <small>支持格式</small>
                 </div>
             </div>
 
@@ -46,7 +46,7 @@
                 <!-- 股票列表将通过JavaScript动态生成 -->
                 <div class="loading-placeholder">
                     <i class="fas fa-spinner fa-spin"></i>
-                    <span>正在加载股票数据...</span>
+                    <span>正在加载数据...</span>
                 </div>
             </div>
 
